setup register and update swagger
